fix issue on safari

--- a/Components/Featured.razor.css
+++ b/Components/Featured.razor.css
@@ -1,7 +1,6 @@
 .featured-cards-grid {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    justify-content: center;
     align-items: stretch;
     width: 100%;
     gap: 72px;
